--- a/user/templates/sign_up_mail.html
+++ b/user/templates/sign_up_mail.html
@@ -1,5 +1,5 @@
 <p>Hello {{first_name}} {{last_name}}</p>
 
 <h3 style = 'color:green;'>Your account has been successfully created.</h3>
-<5 style = 'color:cyan; text-align:center;'>Thanks for crateing an account in ProWheelsMarket</5>
+<h5 style = 'color:cyan; text-align:center;'>Thanks for crateing an account in ProWheelsMarket</h5>
 <b><a href="https://prowheelsmarkets.onrender.com/" style = 'text-decoration:none;'>ProWheelsMarket</a></b>
